# Computer-Organization-Lab

./: README.md
MIPS_Cpp/MIPS_simulator/: CMakeLists.txt  makefile
MIPS_Cpp/MIPS_simulator/buildmsvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ALL_BUILD.vcxproj~  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project2.sln
MIPS_Cpp/MIPS_simulator/src/: CMakeLists.txt  alu.cpp  alu.hpp  alucontrol.cpp  alucontrol.hpp  component.cpp  component.hpp  cpu.cpp  cpu.hpp  ctr.cpp  ctr.hpp  env.hpp  memory.cpp  memory.hpp  other.cpp  other.hpp  parser.cpp  parser.hpp  pc.cpp  pc.hpp  reg.cpp  reg.hpp
MIPS_Cpp/MIPS_simulator/test/: CMakeLists.txt  alu.cpp  alucontrol.cpp  component.cpp  cpu.cpp  ctr.cpp  main.cpp  other.cpp  pc.cpp  reg.cpp  sample
MIPS_Cpp/MIPS_simulator/test/gtest-1.7.0/: Makefile  config.status  libtool
MIPS_Cpp/MIPS_simulator/test/gtest-1.7.0/lib/: libgtest_main.la
MIPS_Cpp/MIPS_simulator/test/lib/: gtest.lib
MIPS_Verilog/lab_source/lab1/: impact_impact.xwbt  led.gise  led.ucf  led.v  led.xise  led_bitgen.xwbt  led_guide.ncd  led_summary.html  webtalk_impact.xml
MIPS_Verilog/lab_source/lab2/: counter.gise  counter.ucf  counter.v  counter.xise  counter_bitgen.xwbt  counter_guide.ncd  counter_summary.html  countert.v  fuseRelaunch.cmd  wave.wcfg
MIPS_Verilog/lab_source/lab3/: Ctr_guide.ncd  Ctr_summary.html  aluCtr.v  fuseRelaunch.cmd  lab3.gise  lab3.xise  test_for_Alu.v  test_for_Alu_isim_beh.wdb  test_for_Ctr.v  test_for_aluCtr.v
MIPS_Verilog/lab_source/lab4/: data_memory.v  fuseRelaunch.cmd  (+8 more)
(+185 files in other folders)
