include_directories("gtest-1.7.0/include/")
set(mylist "")
set(mylib "")
foreach(i ${components})
    list(APPEND mylist ${i}.cpp)
    list(APPEND mylib lib${i})
endforeach()
add_executable(test ${mylist} main.cpp)
if (WIN32 AND CMAKE_SYSTEM_VERSION)
    target_link_libraries(test ${CMAKE_SOURCE_DIR}/test/lib/gtest.lib)
    add_definitions(-D_VARIADIC_MAX=10)
else()
    target_link_libraries(test ${CMAKE_SOURCE_DIR}/test/lib/libgtest.a pthread libcomponent)
endif()
target_link_libraries(test ${mylib})
